Fix overflow issues and styling changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,7 +82,7 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
@@ -141,11 +141,16 @@ a {
   margin:1rem;
 }
 
-.deleteBtn{
+.delete-btn{
   background:transparent;
   font-size: large;
   border:none;
 }
 .task-list{
   height:100vh;
+}
+
+
+.column-title{
+  margin-bottom: 1rem;
 }
